fixed task wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,11 @@ body {
   flex-wrap: wrap;
   justify-content:center;
   align-content: center;
-  gap: 35px;
+  gap: 50px;
 }
 .header {
-  text-align: center;
+  display:flex;
+  justify-content: center;
   margin-top: 15px;
   font-size: 35px;
 }
@@ -50,8 +51,7 @@ body {
   flex-direction: column;
   align-self: center;
   justify-content: center;
-  gap: 25px;
-  padding: 5px;
+  gap: 15px;
   height: 100%;
 }
 
@@ -99,9 +99,9 @@ textarea {
   align-self: center;
   border: 1px solid black;
   background-color: whitesmoke;
-  height: 90%;
+  height: 75vh;
   padding: 5px;
-  width: 50vw;
+  width: 60vh;
   gap:15px;
 }
 
@@ -151,5 +151,8 @@ textarea {
   font-size: 18px;
   font-weight: 500;
 }
+.workCV > :nth-child(3){
+  white-space: pre-wrap;
 
+}
 
